@@ -12,8 +12,10 @@ drlm (2.4.11) stable release; urgency=high
   * NEW! Configurable error reporting message
   * NEW! Toggle pretty mode from command line in all lists
   * Bugfix in get_client_used_mb
+  * Bugfix in Debian12 scheduled jobs
+  * Bugfix in install clients, force non-interactive installations
 
- -- Pau Roura <pau@brainupdaters.net>  Thu, 08 Feb 2024 00:00:00 +0100
+ -- Pau Roura <pau@brainupdaters.net>  Mon, 26 Feb 2024 00:00:00 +0100
 
 drlm (2.4.10) stable release; urgency=high
   * Bugfix in installclient tunnig_rear function
